plugins {
	id 'java'
}

group 'io.github.the-dwellers'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.14
targetCompatibility = 1.14

repositories {
	mavenCentral()
	jcenter()
	maven {
		name 'papermc'
		url 'https://papermc.io/repo/repository/maven-public/'
	}
	maven {
		name 'sonatype'
		url 'https://oss.sonatype.org/content/groups/public/'
	}
	maven {
		name 'jitpack.io'
		url 'https://jitpack.io'
	}
	maven {
		name 'dmulloy2'
		url 'https://repo.dmulloy2.net/nexus/repository/public/'
	}
}

dependencies {
	implementation group: 'com.destroystokyo.paper', name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'

	compileOnly group: 'org.reflections', name: 'reflections', version: '0.9.10'

	compileOnly group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.10'
	// compileOnly group: 'com.github.MilkBowl', name: 'VaultAPI', version: '1.7'

	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.10'

	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.5.2'
}

jar {
	manifest {
		attributes 'Main-Class': 'io.github.the-dwellers.fyre.FyrePlugin'
	}
}

import org.apache.tools.ant.filters.ReplaceTokens

processResources {
	from(sourceSets.main.resources.srcDirs) {
		filter ReplaceTokens, tokens: [version: version]
	}
}

wrapper {
	gradleVersion '6.5'
}
